# sandals

./: .code-workspace  .gitignore  LICENSE  README.adoc  TODO.adoc  cspell.json  pyproject.toml
sandals/: base.py  config.py  core.py  core_2.py  template.py  template_generate.py  util.py  util_test.py
test/features/: environment.py  sandals.feature  sandals_2.feature  util.py
test/features/steps/: sandals.py  sandals_2.py
test/templates/: dc_and_compound.py  marshallable.py  mix_pod_structured.py  nested.py  other_members.py  pod.py  structured.py
test/util/: name_storage.py  name_storage_test.py
